# openapi-to-mcp

./: .gitignore  README.md  env.example  large-spec-handling-strategies.md  pyproject.toml
config/: config.yml
docs/: RESULTS_GUIDE.md
examples/: README.md  hello.yaml  minimal_users_api.yaml  sample_api.yaml  stub_server.py
examples/results/anthropic/minimal_users_api/: evaluation_20250720_154803.json  summary_20250720_154803.md  usage_20250720_154803.json
examples/results/anthropic/sample_api/: evaluation_20250718_150544.json  original_spec_20250718_150544.yaml  summary_20250718_150544.md  usage_20250718_150544.json
examples/results/anthropic/sample_api/mcpserver/: README.md  client.py  quantum_gravity_results.json  requirements.txt  server.py  tool_spec.txt
src/: __init__.py  __main__.py  cli.py  config.py
src/models/: __init__.py  evaluation.py
src/services/: __init__.py  config_loader.py  config_manager.py  llm_client.py  mcp_generator.py  openapi_enhancer.py  output_config.py  output_formatter.py  spec_loader.py
templates/: evaluation_prompt.txt  mcp_client_create.txt  mcp_server_create.txt
