[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "openapi-to-mcp"
version = "0.1.0"
description = "Convert OpenAPI specifications to MCP servers with LLM enhancement"
authors = [
    {name = "OpenAPI to MCP Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.0",
    "jsonschema>=4.20.0",
    "openapi-spec-validator>=0.7.1",
    "fastmcp>=2.0.0",
    "boto3>=1.38.44",
    "anthropic>=0.35.0",
    "bandit>=1.8.5",
    "fastapi>=0.115.13",
]

[project.scripts]
openapi-to-mcp = "src.cli:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/example/openapi-to-mcp"
Repository = "https://github.com/example/openapi-to-mcp"

[dependency-groups]
dev = [
    "bandit>=1.8.5",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto" 
